.kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: djangosample
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: app
          image: akintola/django-sample
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
            requests:
              memory: 256Mi
              cpu: "0.2"
