.kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: djangosample
spec:
  type: NodePort
  selector:
    component: app
  ports:
    - port: 30068
      targetPort: 8000
